Update parcel and land use layout

--- a/portal-frontend/src/app/features/applications/application-details/parcel/parcel.component.html
+++ b/portal-frontend/src/app/features/applications/application-details/parcel/parcel.component.html
@@ -31,7 +31,6 @@
         </button>
       </div>
     </div>
-    <div class="full-width subheading1">Parcel Information</div>
     <div class="subheading2 grid-1">
       Ownership Type
       <app-updated-banner *ngIf="updatedFields.includes(parcelInd + '.ownershipTypeCode')"></app-updated-banner>
@@ -135,21 +134,21 @@
         *ngIf="!parcel.validation?.isCertificateUploaded"
       ></app-no-data>
     </div>
-    <div class="full-width subheading1">
-      Owner Information <app-updated-banner *ngIf="updatedFields.includes(parcelInd + '.owners')"></app-updated-banner>
-    </div>
-    <div class="full-width owner-information">
-      <div class="subheading2">Type</div>
-      <div class="subheading2">Full Name</div>
+
+    <div
+      class="full-width owner-information"
+      [ngClass]="{ 'crown-owner-information': parcel.ownershipTypeCode === PARCEL_OWNERSHIP_TYPES.CROWN }"
+    >
+      <div class="subheading2" *ngIf="parcel.ownershipTypeCode !== PARCEL_OWNERSHIP_TYPES.CROWN">Land Owner(s)</div>
+      <div class="subheading2" *ngIf="parcel.ownershipTypeCode === PARCEL_OWNERSHIP_TYPES.CROWN">Crown Contact(s)</div>
       <div class="subheading2" *ngIf="parcel.ownershipTypeCode !== PARCEL_OWNERSHIP_TYPES.CROWN">Organization</div>
       <div class="subheading2" *ngIf="parcel.ownershipTypeCode === PARCEL_OWNERSHIP_TYPES.CROWN">
-        Ministry/ Department
+        Ministry/Department
       </div>
       <div class="subheading2">Phone</div>
       <div class="subheading2">Email</div>
-      <div class="subheading2">Corporate Summary</div>
+      <div class="subheading2" *ngIf="parcel.ownershipTypeCode !== PARCEL_OWNERSHIP_TYPES.CROWN">Corporate Summary</div>
       <ng-container *ngFor="let owner of parcel.owners">
-        <div>{{ owner.type.label }}</div>
         <div>{{ owner.displayName }}</div>
         <div>
           <span *ngIf="owner.organizationName"></span>{{ owner.organizationName }}
@@ -157,7 +156,7 @@
         </div>
         <div>{{ owner.phoneNumber }}</div>
         <div>{{ owner.email }}</div>
-        <div>
+        <div *ngIf="parcel.ownershipTypeCode !== PARCEL_OWNERSHIP_TYPES.CROWN">
           <a *ngIf="owner.corporateSummary" (click)="onOpenFile(owner.corporateSummary.uuid)">{{
             owner.corporateSummary.fileName
           }}</a>
