--- a/portal-frontend/src/app/features/applications/application-details/parcel/parcel.component.scss
+++ b/portal-frontend/src/app/features/applications/application-details/parcel/parcel.component.scss
@@ -2,7 +2,7 @@
 
 .owner-information {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
   overflow-x: auto;
   grid-column-gap: rem(36);
   grid-row-gap: rem(12);
@@ -10,6 +10,10 @@
   .full-width {
     grid-column: 1/3;
   }
+}
+
+.crown-owner-information {
+  grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 
 .review-table {
