--- a/portal-frontend/src/app/features/notice-of-intents/notice-of-intent-details/notice-of-intent-details.component.scss
+++ b/portal-frontend/src/app/features/notice-of-intents/notice-of-intent-details/notice-of-intent-details.component.scss
@@ -80,7 +80,7 @@
 
   .adjacent-parcels {
     display: grid;
-    grid-template-columns: max-content max-content max-content;
+    grid-template-columns: 0.65fr 1fr 1fr;
     overflow-x: auto;
     grid-column-gap: rem(36);
     grid-row-gap: rem(12);
