--- a/portal-frontend/src/app/features/notifications/notification-details/notification-details.component.scss
+++ b/portal-frontend/src/app/features/notifications/notification-details/notification-details.component.scss
@@ -72,7 +72,7 @@
 
   .transferee-table {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     overflow-x: auto;
     grid-column-gap: rem(36);
     grid-row-gap: rem(12);
@@ -88,14 +88,6 @@
     grid-template-columns: 1fr;
     word-wrap: break-word;
     hyphens: auto;
-
-    &.other-layout {
-      grid-template-columns: 1fr 1fr;
-
-      .edit-button {
-        grid-column: 1/3;
-      }
-    }
 
     .edit-button {
       display: flex;
